@@ -1,5 +1,16 @@
 2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/axis/CategoryAxis.java
+    (CategoryAxis): Leave tick marks visible by default,
+    (draw): Call drawTickMarks(),
+    (drawTickMarks): New method,
+    * source/org/jfree/chart/axis/CategoryAxis3D.java
+    (draw): Call drawTickMarks(),
+    * source/org/jfree/chart/axis/NumberAxis3D.java
+    (NumberAxis3D): Leave axis line visible by default.
+
+2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>
+
     Patch 2686872 by Peter Kolb:
     * source/org/jfree/chart/title/PaintScaleLegend.java: Implemented
     AxisChangeListener,
